@@ -2,6 +2,7 @@
 <window>
   <defaultcontrol>-</defaultcontrol>
   <controls>
+    <include>CommonBackground</include>
     <control type="visualisation" id="2">
       <!-- FIX ME Music Visualization needs to have an id of 2 in this window to be able to lock or change preset -->
       <description>visualisation</description>
@@ -10,7 +11,6 @@
       <width>1280</width>
       <height>720</height>
     </control>
-    <include>CommonBackground</include>
     <!-- the Album Cover -->
     <control type="image">
       <description>cover image</description>
@@ -71,64 +71,6 @@
       <label>$INFO[Player.Time(hh:mm:ss)] / $INFO[Player.Duration(hh:mm:ss)]</label>
       <textcolor>$VAR[TextColor2]</textcolor>
       <shadowcolor>black</shadowcolor>
-    </control>
-    <!--OUTSIDETEMP-->
-    <control type="group">
-      <visible>!IsEmpty(Window(10000).Property(IBUS_OBC_TEMP))</visible>
-      <animation effect="slide" start="0,0" end="-90,0" delay="0" time="300" condition="Player.Muted">conditional</animation>
-      <animation effect="slide" start="490,0" end="0,0" delay="0" time="200">VisibleChange</animation>
-      <animation effect="slide" start="0,0" end="460,0" delay="0" time="400">WindowClose</animation>
-      <animation effect="slide" start="460,0" end="0,0" delay="0" time="400">WindowOpen</animation>
-      <control type="image">
-        <description>temp background</description>
-        <posx>365r</posx>
-        <posy>0</posy>
-        <width>560</width>
-        <height>60</height>
-        <texture flipx="true" border="32,0,0,0">bmw/header.png</texture>
-      </control>
-      <control type="label">
-        <description>temp label</description>
-        <posx>350r</posx>
-        <posy>0</posy>
-        <width>190</width>
-        <height>55</height>
-        <align>center</align>
-        <aligny>center</aligny>
-        <font>font38_title</font>
-        <textcolor>$VAR[TextColor1]</textcolor>
-        <shadowcolor>black</shadowcolor>
-        <label>$INFO[Window(10000).Property(IBUS_OBC_TEMP)]</label>
-      </control>
-    </control>
-    <!--Clock-->
-    <control type="group">
-      <posx>210r</posx>
-      <posy>0</posy>
-      <animation effect="slide" start="0,0" end="-55,0" delay="0" time="300" condition="Player.Muted">conditional</animation>
-      <animation effect="slide" start="0,0" end="210,0" delay="0" time="300" condition="Window.Next(Home) | Window.IsActive(Home) + ![Window.IsVisible(MovieInformation) | Window.IsVisible(MusicInformation)]">WindowClose</animation>
-      <animation effect="slide" start="210,0" end="0,0" delay="0" time="300" condition="Window.Previous(Home) | Window.IsVisible(Home) + ![Window.IsVisible(MovieInformation) | Window.IsVisible(MusicInformation)]">WindowOpen</animation>
-      <control type="image">
-        <description>time background</description>
-        <posx>160r</posx>
-        <posy>0</posy>
-        <width>260</width>
-        <height>60</height>
-        <texture flipx="true" border="32,0,0,0">bmw/header.png</texture>
-      </control>
-      <control type="label">
-        <description>time label</description>
-        <posx>5r</posx>
-        <posy>0</posy>
-        <width>170</width>
-        <height>55</height>
-        <align>right</align>
-        <aligny>center</aligny>
-        <font>font38_title</font>
-        <textcolor>$VAR[TextColor1]</textcolor>
-        <shadowcolor>black</shadowcolor>
-        <label>$INFO[System.Time]</label>
-      </control>
     </control>
   </controls>
 </window>
