@@ -1,3 +1,6 @@
+[B]1.0.16[/B]
+- Outside-Temp and Clock for Video and Music Fullscreen
+
 [B]1.0.15[/B]
 - changes for PDC
 - resized/moved the PDC graphics
